--- a/portalapp/static/CSS/homepage.css
+++ b/portalapp/static/CSS/homepage.css
@@ -1055,7 +1055,7 @@ display: none;}
     width: 100%;
     height: 50px;
     padding: 8px 15px;
-    font-size: 12px;
+    font-size: 13px;
     line-height: 1.42857143;
     color: #000;
     background-color: #fff;
@@ -1110,7 +1110,7 @@ label{
 	font-weight:bolder;
 }
 
-select:focus,textarea:focus{
+select:focus,textarea:focus,button:focus{
 	outline:none !important;
 	box-shadow:none !important;
 }
