--- a/portalapp/templates/headercontent.html
+++ b/portalapp/templates/headercontent.html
@@ -5,8 +5,8 @@
             -moz-column-count:4; /* Firefox */
             -webkit-column-count:4; /* Safari and Chrome */
             column-count:4;
-            width: 850px;
-            height:575px;
+           /**width: 850px;**/
+            /**height:575px;**/
         }
         #dd {
             height: 20px;
