--- a/portalapp/static/CSS/homepage.css
+++ b/portalapp/static/CSS/homepage.css
@@ -477,6 +477,13 @@ background-color: rgb(24, 31, 69);
     vertical-align: middle;
     font-weight: normal;
 }
+@media(max-width:768px){
+.cover-image .h1 {
+    font-size: 2rem;
+    margin-top: 2rem;
+}
+
+}
 
 .cover-image .layer {
     color: #fff;
